# quarto_githubpages_sample

./: .gitignore  .nojekyll  _quarto.yml  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
_freeze/projects/project_A/analysis_v1/execute-results/: html.json
_freeze/projects/project_A/document/execute-results/: html.json
_freeze/projects/project_B/Untitled-1/execute-results/: html.json
_freeze/projects/project_B/document/execute-results/: html.json
_freeze/projects/project_B/src/document/execute-results/: html.json
_freeze/projects/project_B/src/slide/execute-results/: html.json
projects/project_A/: document.html  document.qmd  pyproject.toml
projects/project_B/: document.html  document.qmd  index.html  index.qmd  pyproject.toml
projects/project_B/src/: document.html  document.qmd  index.html  slide.html  slide.qmd
