[project]
name = "project_B"
version = "0.1.0"
requires-python = ">= 3.13"
dependencies = [
    "altair>=6.0.0",
    "great-tables>=0.21.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "polars>=1.39.3",
    "scipy>=1.17.1",
    "vega-datasets>=0.9.0",
]
